# bots-analysis

./: .gitignore  AUDIT_REPORT.md  BUGS_EXTENDED_REPORT.md  CRITICAL_BUGS_FINAL.md  backdoor_search.py  batch_fixer.py  bots_list.txt  check_replace.py  data.json  deep_search.py  find_amount_parsing.py  fix_admin_input.py  fix_api.py  fix_bulba.py  fix_bulba_test.py  fix_bulba_test10.py  fix_bulba_test11.py  fix_bulba_test13.py  fix_bulba_test2.py  fix_bulba_test3.py  fix_bulba_test4.py  fix_bulba_test5.py  fix_bulba_test6.py  fix_bulba_test7.py  fix_bulba_test8.py  fix_bulba_test9.py  fix_parsing.py  fix_parsing_generic.py  fix_silent_except.py  fix_sqlite.py  plan.md  run_all_tests.py  run_test.sh  run_tests.py  run_tests.sh  run_tests_fixed.py  search_admin.py  search_db_race.py  search_db_race2.py  search_issues.py  (+6 more)
BITMAFIA/bitmafia_clone/: pyproject.toml  requirements.txt
BITMAFIA/bitmafia_clone/app/: __init__.py  catalog.py  constants.py  currency_parser.py  keyboards.py  overrides.py  qr.py  rates.py  renderer.py  (+3 more)
MIXMAFIA/mixmafia_clone/: .env.example  .gitignore  pyproject.toml
lucky_original_production/: .env.example  README.md  dev.py  init_data.py  main.py  pyproject.toml  requirements.txt  setup_botik.sh  test_imports.py
lucky_original_production/bot/: main.py  middlewares.py  tasks.py
lucky_original_production/core/: config.py  database.py  models.py  settings_manager.py  utils.py
lucky_original_production/tests/: __init__.py  test_config_fixes.py  test_currency_parser.py  test_fixes.py  test_rates.py
lucky_original_production/web/: main.py
(+577 files in other folders)
