[project]
name = "bitmafia-clone"
version = "0.1.0"
description = "Flow-driven Telegram bot clone for bitmafia_bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.21.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
  "qrcode[pil]>=8.2",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "ruff>=0.13.0",
  "ty>=0.0.1a19",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
